I have applied the style changes to correct the spacing and alignment of the logo image and brand name elements inside the navigation bar: Logo Offset: Adjusted the logo's negative margin to -29px to position it. Sub-brand Text Alignment: Updated the padding and margin offsets on the second text segment (FACILISSIMO) to maintain visual flow. Spacing Adjustments: Injected 7px of left padding on the tertiary text element (WEB) to balance the horizontal rhythm.

--- a/src/index.css
+++ b/src/index.css
@@ -485,15 +485,32 @@ div#root:nth-of-type(1) > div#app-root-container:nth-of-type(1) > div#ai-chat-as
 
 /* --- LOGO SIZE ADJUSTMENTS --- */
 div#root:nth-of-type(1) > div#app-root-container:nth-of-type(1) > div:nth-of-type(2) > header#app-navbar:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div#brand-logo:nth-of-type(1) > div:nth-of-type(1) {
-  width: 150px !important;
+  width: 100px !important;
   height: auto !important;
 }
 
 div#root:nth-of-type(1) > div#app-root-container:nth-of-type(1) > div:nth-of-type(2) > header#app-navbar:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div#brand-logo:nth-of-type(1) > div:nth-of-type(1) > img:nth-of-type(1) {
-  width: 150px !important;
-  height: 69.3906px !important;
+  padding-left: 0px !important;
+  margin-left: -29px !important;
+  padding-top: 0px !important;
+  width: 100px !important;
+  height: 46.26px !important;
   max-width: none !important;
   max-height: none !important;
+}
+
+div#root:nth-of-type(1) > div#app-root-container:nth-of-type(1) > div:nth-of-type(2) > header#app-navbar:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div#brand-logo:nth-of-type(1) > div:nth-of-type(2) > span:nth-of-type(1) > span:nth-of-type(2) {
+  padding-left: 15px !important;
+  margin-left: -35px !important;
+}
+
+div#root:nth-of-type(1) > div#app-root-container:nth-of-type(1) > div:nth-of-type(2) > header#app-navbar:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div#brand-logo:nth-of-type(1) > div:nth-of-type(2) > span:nth-of-type(1) > span:nth-of-type(3) {
+  padding-left: 7px !important;
+}
+
+div#root:nth-of-type(1) > div#app-root-container:nth-of-type(1) > div:nth-of-type(2) > header#app-navbar:nth-of-type(1) > div:nth-of-type(1) > div:nth-of-type(1) > div#brand-logo:nth-of-type(1) {
+  padding-left: 0px !important;
+  margin-left: -7px !important;
 }
 
 /* --- CHAT CHROMATIC RE-STYLE --- */
